@@ -1,11 +1,11 @@
 package Presentacion;
 
+import Presentacion.dto.ComunidadDTO;
+import Presentacion.dto.MiembroDTO;
 import Presentacion.dto.UsuarioDTO;
 import com.google.gson.Gson;
-import dominio.comunidades.Comunidad;
-import dominio.comunidades.Miembro;
-import dominio.comunidades.RepoComunidades;
-import dominio.comunidades.TipoMiembro;
+import dominio.clasesTecnicas.Usuario;
+import dominio.comunidades.*;
 import io.javalin.http.Context;
 import io.javalin.http.Handler;
 
@@ -24,41 +24,25 @@ public class GetMiembrosComunidadAdministradaHandler implements Handler {
     Comunidad comunidad = RepoComunidades.getInstance().obtenerComunidadPorId(Integer.parseInt(idComunidad));
     System.out.println("COMUNIDAD:" + comunidad.getId() + ", " + comunidad.getNombre());
 
-    Set<UsuarioDTO> usuariosAfectados = new HashSet<>();
-    Set<UsuarioDTO> usuariosObservadores = new HashSet<>();
-
-    Set<UsuarioDTO> u = new HashSet<>(comunidad.getAfectados().stream().map(c->this.mapUsuarioToDTO(c, TipoMiembro.AFECTADO, comunidad)).collect(Collectors.toList()));
-    for (UsuarioDTO usuarioDTO : u) {
-      if (usuariosAfectados.stream().noneMatch(c -> c.getId() == usuarioDTO.getId())){
-        usuariosAfectados.add(usuarioDTO);
-      } else {
-        UsuarioDTO usuario = usuariosAfectados.stream().filter(c->c.getId() == usuarioDTO.getId()).findFirst().get();
-        usuario.getComunidades().add(comunidad);
-      }
+    String filtro = context.queryParam("tipoMiembro");
+    System.out.println(filtro);
+    Set<MiembroDTO> miembroDTOS = new HashSet<>();
+    if(filtro.equals("afectado") || filtro.equals("todos")){
+      List<MiembroDTO> afectados = comunidad.getAfectados().stream().map(afectado-> new MiembroDTO(afectado, TipoMiembro.AFECTADO)).collect(Collectors.toList());
+      miembroDTOS.addAll(afectados);
+      System.out.println("Agrego afectados");
+    }
+    if(filtro.equals("observador") || filtro.equals("todos")){
+     List<MiembroDTO> observadores = comunidad.getObservadores().stream().map(observador-> new MiembroDTO(observador, TipoMiembro.OBSERVADOR)).collect(Collectors.toList());
+      miembroDTOS.addAll(observadores);
+      System.out.println("Agrego observadores");
     }
 
-    Set<UsuarioDTO> u2 = new HashSet<>(comunidad.getObservadores().stream().map(c->this.mapUsuarioToDTO(c, TipoMiembro.OBSERVADOR, comunidad)).collect(Collectors.toList()));
-    for (UsuarioDTO usuarioDTO : u2) {
-      if (usuariosObservadores.stream().noneMatch(c -> c.getId() == usuarioDTO.getId())){
-        usuariosObservadores.add(usuarioDTO);
-      } else {
-        UsuarioDTO usuario = usuariosObservadores.stream().filter(c->c.getId() == usuarioDTO.getId()).findFirst().get();
-        usuario.getComunidades().add(comunidad);
-      }
-    }
+    ComunidadDTO comunidadDTO = new ComunidadDTO(comunidad, miembroDTOS.stream().toList());
 
-    Set<UsuarioDTO> usuarios = new HashSet<>(usuariosAfectados);
-    usuarios.addAll(usuariosObservadores);
-
-
-    String jsonString= new Gson().toJson(usuarios);
+    String jsonString= new Gson().toJson(comunidadDTO);
     System.out.println(jsonString);
     context.json(jsonString);
   }
 
-  private UsuarioDTO mapUsuarioToDTO(Miembro miembro, TipoMiembro tipo, Comunidad comunidad) {
-    List<Comunidad> comunidades = new ArrayList<>();
-    comunidades.add(comunidad);
-    return new UsuarioDTO(miembro.getId(), miembro.getNombre(), miembro.getApellido(), miembro.getCorreoElectronico(), miembro.getMedioPreferido(), miembro.getNroDeTelefono(), miembro.getInteres(), miembro.getLocalizacion(), tipo, comunidades);
-  }
 }
